--- a/style.css
+++ b/style.css
@@ -39,22 +39,33 @@ a {
 a:hover {
     color: royalblue;
 }
-p {
+h2 {
+    margin: 30px 0 5px 0;
+}
+h2, p {
     text-align: center;
 }
 #about {
     width: 100%;
     height: 100vh;
-    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-    background-size: 400% 400%;
-    animation: gradient 15s ease infinite;
+    background-color: #ffffff;
+    background-image: url('resources/back.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    filter: blur(5);
+}
+#about img {
+    margin-bottom: 20px;
+    border: 1px solid dimgray;
+    border-radius: 2px;
 }
 #about p { 
-    font-size: 28px;
+    font-size: 18px;
     display: block;
     color: #ffffff;
     width: 60%;
@@ -77,8 +88,35 @@ p#title-name {
     font-family: 'Rubik Vinyl', cursive;
     font-size: 64px;
 }
-#typed-text {
+#about-text {
+    margin-top: 20px;
     margin-bottom: 40px;
+}
+#skill {
+    width: 100%;
+    background-color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.skill-section {
+    width: 95%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-bottom: 20px;
+    flex-wrap: wrap;
+}
+.skill-section div {
+    margin: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.skill-section img {
+    width: 90px;
+    height: 90px;
 }
 #portfolio {
     width: 80%;
@@ -106,7 +144,7 @@ p#title-name {
     align-items: center;
     cursor: pointer;
 }
-#portfolio .box img {
+#portfolio .box img, #portfolio .box video {
     width: 100%;
     height: auto;
     border-top-left-radius: 15px;
@@ -168,18 +206,18 @@ footer {
     width: 100%;
     padding: 30px;
     background-color: #534c4c;
-    color: #ffffff
+    color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-@keyframes gradient {
-    0% {
-        background-position: 0% 50%;
-    }
-    50% {
-        background-position: 100% 50%;
-    }
-    100% {
-        background-position: 0% 50%;
-    }
+
+footer a {
+    color: #ffffff;
+    font-size: 14px;
+    display: inline-block;
+    text-align: center;
+    text-decoration: underline;
 }
 @media(max-width: 900px) {
     header {
@@ -201,5 +239,9 @@ footer {
     #contact p, #contact form {
         width: 90%;
         margin-left: 5%;
+    }
+    .skill-section img {
+        width: 50px;
+        height: 50px;
     }
 }
